<resources>
    <string name="app_name">AirCheck</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    //Pantalla QR
    <string name="bienvenido">¡Bienvenido al cargador de SIRVE!</string>
    <string name="escanear">Escanear </string>
    <string name="title_activity_charge">Comenzar Carga</string>

    //Pantalla QR Decoder
    <string name="apuntar">Apunte al código que quiera escanear</string>

    //Start Charge Screen
    <string name="cargador">Se ha conectado al cargador </string>
    <string name="startButton">Iniciar\nCarga</string>
    <string name="title_activity_decoder_qr">DecoderQRActivity</string>

    //Pantalla QR Decoder
    <string name="title_near_chargers">Cargadores cercanos</string>


    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_personal_info">Información Personal</string>
    <string name="title_activity_calendar">Reservas</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings navigation drawer-->
    <string name="home_item">Home</string>
    <string name="help_item">Ayuda</string>
    <string name="map_item">Mapa Cargadores</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="personal_info">Información Personal</string>
    <string name="configuracion_item">Configuración</string>
    <string name="settings_item">Ajustes</string>

    <string name="prof_email">E-mail</string>
    <string name="prof_Name">Usuario</string>
    <string name="prof_Surname">Apellidos</string>
    <string name="prof_Username">Username</string>
    <string name="prof_phone">Teléfono</string>
    <string name="prof_creación">Fecha de ingreso</string>
    <string name="prof_DNI">Número de identidad</string>

    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyB_24vZJMMNpfuLBCGIuCpsDfcrnrrFIeM
    </string>

    <string name="cough">Cough</string>
    <string name="wheezing">Wheezing</string>
    <string name="nasal">Nasal obstruction</string>
    <string name="sneeze">Sneeze</string>
    <string name="eyes">Itchy eyes</string>
    <string name="breath">Shortness of breath</string>
    <string name="mouth">Dry mouth</string>
    <string name="feed">FEEDBACK</string>
    <string name="submit">Submit</string>
</resources>
