<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfoActivity">

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbarPersonal"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp">
        <TextView
            android:id="@+id/usernameTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"

            android:padding="15dp"
            android:text="@string/prof_Username"
            android:textColor="@color/title_profile_color"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/profile_inputs"
            android:text="Usuario"
            android:layout_marginTop="@dimen/txt_top"
            android:id="@+id/usernameTxt"
            android:layout_below="@+id/usernameTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/emailTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/prof_email"
            android:textColor="@color/title_profile_color"
            android:layout_below="@+id/usernameTxt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/profile_inputs"
            android:text="usuario@spaceapps.es"
            android:layout_marginTop="@dimen/txt_top"
            android:id="@+id/emailTxt"
            android:layout_below="@+id/emailTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/nameTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/prof_Name"
            android:textColor="@color/title_profile_color"
            android:layout_below="@+id/emailTxt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/profile_inputs"
            android:text="Pedro"
            android:layout_marginTop="@dimen/txt_top"
            android:id="@+id/nameTxt"
            android:layout_below="@+id/nameTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/surnameTitle"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:text="@string/prof_Surname"
            android:textColor="@color/title_profile_color"
            android:layout_below="@+id/nameTxt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/profile_inputs"
            android:text="Perez Perez"
            android:layout_marginTop="@dimen/txt_top"
            android:id="@+id/surnameTxt"
            android:layout_below="@+id/surnameTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</RelativeLayout>
